disable xml config